--- a/project.html
+++ b/project.html
@@ -1,23 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 <head>
+    <meta charset="UTF-8">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Search</title>
-</head>
-<body>
-    <label for="searchInput">Enter search keywords:</label>
-    <input type="text" id="searchInput" placeholder="e.g., programming languages">
-    <button onclick="searchGoogle()">Search</button>
-
     <script>
         function searchGoogle() {
-            var searchQuery = encodeURIComponent(document.getElementById('searchInput').value);
+            var searchQuery = encodeURIComponent(document.getElementById('searchBar').value);
             var searchURL = 'https://www.google.com/search?q=' + searchQuery;
 
             // 開啟新分頁
             window.open(searchURL, '_blank');
         }
     </script>
+    <!-- Detect Enter action -->
+
+
+    
+</head>
+
+<body>
+    <label for="searchBar">Enter search keywords:</label>
+    <input type="text" id="searchBar" placeholder="輸入搜尋內容">
+    <script>
+        const searchInput = document.getElementById('searchBar');
+        searchInput.addEventListener("keydown", function(event) {
+            // Check if the pressed key is "Enter" (key code 13)
+            if (event.keyCode === 13) {
+                // Execute your search function or any other action here
+                searchGoogle();
+            }
+        });
+    </script>
+    <button onclick="searchGoogle()">Search</button>
 </body>
 </html>
