--- a/homepage/index2.html
+++ b/homepage/index2.html
@@ -8,8 +8,8 @@
 		
 			<!-- Compiled and minified JavaScript -->
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-			<script src = "js/search.js"></script>
-
+			<!--Import Google Icon Font-->
+			<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 			<!--Import Calender Font-->
 			<link rel="stylesheet" href="./assets/css/calender.css">
 			<link rel="stylesheet" href="./assets/css/indexgrid.css">
@@ -39,120 +39,67 @@
 				<div class="nav-wrapper">
 					<a id="homeTitle" class="brand-logo" href="https://www.google.com/">Cactus</a>
 					<ul id="nav-mobile" class="right hide-on-med-and-down">
-						<li class="smooth-menu"><a href="https://idp.nchu.edu.tw/nidp/idff/sso?id=20&sid=5&option=credential&sid=5&target=https%3A%2F%2Fportal.nchu.edu.tw%2Fportal">興大入口</a></li>
-						<li class="smooth-menu"><a href="https://lms2020.nchu.edu.tw/">iLearning 3.0</a></li>
-						<li class="smooth-menu"><a href="https://chat.openai.com/">ChatGPT</a></li>
-						<li class="smooth-menu"><a href="https://www.youtube.com/">Youtube</a></li>
-						<li class="smooth-menu"><a href="https://streetvoice.com/">StreetVoice</a></li>
-						<li class="smooth-menu"><a href="https://www.netflix.com">NetFlix</a></li>
-						<li class="smooth-menu"><a href="https://www.facebook.com/">facebook</a></li>
+						<li class="navbarButton"><a href="https://idp.nchu.edu.tw/nidp/idff/sso?id=20&sid=5&option=credential&sid=5&target=https%3A%2F%2Fportal.nchu.edu.tw%2Fportal">興大入口</a></li>
+						<li class="navbarButton"><a href="https://lms2020.nchu.edu.tw/">iLearning 3.0</a></li>
+						<li class="navbarButton"><a href="https://chat.openai.com/">ChatGPT</a></li>
+						<li class="navbarButton"><a href="https://www.youtube.com/">Youtube</a></li>
+						<li class="navbarButton"><a href="https://streetvoice.com/">StreetVoice</a></li>
+						<li class="navbarButton"><a href="https://www.netflix.com">NetFlix</a></li>
+						<li class="navbarButton"><a href="https://www.facebook.com/">facebook</a></li>
 					</ul>
 				</div>
 			</nav>
 		</div>
 
-		<div class="gridDiv" id="searchBar">search bar
-			<section id="welcome-hero" class="welcome-hero">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12 text-center">
-							<div class="header-text">
-								<!--<h2>Welcome</h2>-->
-								<div class="search">
-									<p for="searchBar">Google Search:</p> <br>
-									<input class="long-search-bar" type="text" id="searchBar" placeholder="輸入搜尋內容(按Enter可進到Google主頁)">
-									<script>
-										const searchInput = document.getElementById('searchBar');
-										searchInput.addEventListener("keydown", function(event) {
-											// Check if the pressed key is "Enter" (key code 13)
-											if (event.keyCode === 13) {
-												// Execute your search function or any other action here
-												searchGoogle();
-											}
-										});
-									</script>
-								</div>
-								<div class="search">
-									<p for="youtubeBar">Youtube Search:</p> <br>
-									<input class="short-search-bar" type="text" id="youtubeBar" placeholder="輸入想搜尋的影片(按Enter可進到YT主頁)">
-									<script>
-										const youtubeInput = document.getElementById('youtubeBar');
-										youtubeInput.addEventListener("keydown", function(event) {
-											// Check if the pressed key is "Enter" (key code 13)
-											if (event.keyCode === 13) {
-												// Execute your search function or any other action here
-												searchYoutube();
-											}
-										});
-									</script>
-								</div>
-								<div class="search">
-									<p for="translateBar">Translate:</p>
-									<input class="short-search-bar" type="text" id="translateBar" placeholder="輸入想翻譯的文字(英翻中，其他語言翻英)">
-									<script>
-										const translateBar = document.getElementById('translateBar');
-										// Add an event listener for the "keydown" event
-										translateBar.addEventListener('keydown', function(event) {
-											// Check if the pressed key is "Enter" (key code 13)
-											if (event.keyCode === 13) {
-												// Call the function to check if the entered text is English
-												checkLanguage();
-											}
-										});
-									</script>
-								</div>                         
-							</div><!--/.header-text-->
-						</div><!--/.col-->
-					</div><!-- /.row-->
-				</div><!-- /.container-->
-			</section><!--/.welcome-hero-->
+		<!---searchbar start--->
+		<div class="gridDiv" id="searchBarDiv">
+			<div class="search">
+				<p for="youtubeBar">Youtube Search</p><br>
+				<input class="shortSearchBar" type="text" id="youtubeBar" placeholder="輸入想搜尋的影片(按Enter可進到YT主頁)">
+			</div>
+			<div class="search">
+				<p for="searchBar">Google Search</p><br>
+				<input class="shortSearchBar" type="text" id="searchBar" placeholder="輸入搜尋內容(按Enter可進到Google主頁)">
+			</div>
+			<div class="search">
+				<p for="translateBar">Translate</p><br>
+				<input class="shortSearchBar" type="text" id="translateBar" placeholder="輸入想翻譯的文字(英翻中，其他語言翻英)">
+			</div>  
 		</div>
-		<div class="gridDiv" id="sideBar">side bar
-			<div class="sideMenu">
-				<nav>
-					<ul>
-						<li><a class="sideBtn" href="#"><img src='#' alt='icon' class='icon'>Home</a></li>
-						<li><a class="sideBtn" href="#"><img src='#' alt='icon' class='icon'>Calendar</a></li>
-						<li><a class="sideBtn" href="#"><img src='#' alt='icon' class='icon'>Timer</a></li>
-						<li><a class="sideBtn" href="#"><img src='#' alt='icon' class='icon'>Setting</a></li>
-					</ul>
-				</nav>
+		<!---searchbar end--->
+
+		<!---sidebar start--->
+		<div class="gridDiv" id="sideBar">
+			<div>
+				<ul>
+					<li class="sideBtn"><a href="#"><img src='#' alt='icon' class='icon'>Home</a></li>
+					<li class="sideBtn"><a href="#"><img src='#' alt='icon' class='icon'>Calendar</a></li>
+					<li class="sideBtn"><a href="#"><img src='#' alt='icon' class='icon'>Timer</a></li>
+					<li class="sideBtn"><a  href="#"><img src='#' alt='icon' class='icon'>Setting</a></li>
+				</ul>
 			</div>
 		</div>
+		<!---sidebar end--->
+
+
 		<div class="gridDiv" id="calender">calender
 		</div>
-		<!--button bar-->
-		<div class="gridDiv" id="buttonBar">button bar
-			<div>
-				<a href="">
-					<img src="assets/images/clouddrive.svg">Cloud Drive
-				</a>
-				<a href="https://drive.google.com/drive/u/0/my-drive">
-					<img src="assets/images/clouddriveafter.svg">Google Drive
-				</a>
-				<a href="https://mail.google.com/mail/u">
-					<img src="assets/images/gmail.svg">Gmail
-				</a>
-				<a href="https://www.google.com/maps">
-					<img src="assets/images/gmaps.svg">Google Map
-				</a>
-				<a href="https://github.com">
-					github
-				</a>
-				<a href="https://metronom.us/en/">
-					metronom
-				</a>
-				<a href="https://leetcode.com/">
-					<img src="assets/images/leetcode.svg">LeetCode
-				</a>
-				<a href="https://www.overleaf.com/project">
-					<img src="assets/images/overleafafter.svg">OverLeaf
-				</a>
-				<a href="https://en.cppreference.com/w/">
-					<img src="assets/images/cpp.svg">CppReference
-				</a>
-			</div>
+
+
+		<!--buttonbar start-->
+		<div class="gridDiv" id="buttonBar">
+			<div class="buttonbar"><a href="https://drive.google.com/drive/u/0/my-drive"><img src="assets/images/clouddrive.svg" class="btnicon">Google Drive</a></div>
+			<div class="buttonbar"><a href="https://mail.google.com/mail/u"><img src="assets/images/gmail.svg" class="btnicon">Gmail</a></div>
+			<div class="buttonbar"><a href="https://www.google.com/maps"><img src="assets/images/gmaps.svg" class="btnicon">Google Map</a></div>
+			<div class="buttonbar"><a href="https://github.com"><img src="assets/images/github.svg" class="btnicon">github</a></div>
+			<div class="buttonbar"><a href="https://metronom.us/en/"><img src="assets/images/metronomus.svg" class="btnicon">metronomus</a></div>
+			<div class="buttonbar"><a href="https://leetcode.com/"><img src="assets/images/leetcode.svg" class="btnicon">LeetCode</a></div>
+			<div class="buttonbar"><a href="https://www.overleaf.com/project"><img src="assets/images/overleaf.svg" class="btnicon">OverLeaf</a></div>
+			<div class="buttonbar"><a href="https://en.cppreference.com/w/"><img src="assets/images/cpp.svg" class="btnicon">CppReference</a></div>
 		</div>
+		<!--buttonbar end-->
 	</div>
+
+	<script src = "assets/js/search.js"></script>
 </body>
 </html>
