--- a/homepage/index2.html
+++ b/homepage/index2.html
@@ -34,10 +34,11 @@
 		</head>
 <body>
 	<div class="wrapper">
+		<!---header start--->
 		<div class="gridDiv" id="header">
 			<nav>
 				<div class="nav-wrapper">
-					<a id="homeTitle" class="brand-logo" href="https://www.google.com/">Cactus</a>
+					<a id="homeTitle" class="brand-logo" href="https://www.google.com/">&nbsp;&nbsp;Cactus</a>
 					<ul id="nav-mobile" class="right hide-on-med-and-down">
 						<li class="navbarButton"><a href="https://idp.nchu.edu.tw/nidp/idff/sso?id=20&sid=5&option=credential&sid=5&target=https%3A%2F%2Fportal.nchu.edu.tw%2Fportal">興大入口</a></li>
 						<li class="navbarButton"><a href="https://lms2020.nchu.edu.tw/">iLearning 3.0</a></li>
@@ -50,6 +51,7 @@
 				</div>
 			</nav>
 		</div>
+		<!---header end--->
 
 		<!---searchbar start--->
 		<div class="gridDiv" id="searchBarDiv">
@@ -72,10 +74,10 @@
 		<div class="gridDiv" id="sideBar">
 			<div>
 				<ul>
-					<li class="sideBtn"><a href="#"><img src='#' alt='icon' class='icon'>Home</a></li>
-					<li class="sideBtn"><a href="#"><img src='#' alt='icon' class='icon'>Calendar</a></li>
-					<li class="sideBtn"><a href="#"><img src='#' alt='icon' class='icon'>Timer</a></li>
-					<li class="sideBtn"><a  href="#"><img src='#' alt='icon' class='icon'>Setting</a></li>
+					<li><a class="sideLink" href="#"><i class="material-icons">cottage</i>Home</a></li>
+					<li><a class="sideLink" href="#"><i class="material-icons">event</i>calendar</a></li>
+					<li><a class="sideLink" href="#"><i class="material-icons">timer</i>Timer</a></li>
+					<li><a class="sideLink" href="#"><i class="material-icons">settings</i>Setting</a></li>
 				</ul>
 			</div>
 		</div>
