--- a/homepage/index2.html
+++ b/homepage/index2.html
@@ -47,6 +47,7 @@
 						<li class="navbarButton"><a href="https://streetvoice.com/">StreetVoice</a></li>
 						<li class="navbarButton"><a href="https://www.netflix.com">NetFlix</a></li>
 						<li class="navbarButton"><a href="https://www.facebook.com/">facebook</a></li>
+						<li class="navbarButton"><a href="#">Sign in</a></li>
 					</ul>
 				</div>
 			</nav>
@@ -77,7 +78,7 @@
 					<li><a class="sideLink" href="#"><i class="material-icons">cottage</i>Home</a></li>
 					<li><a class="sideLink" href="#"><i class="material-icons">event</i>calendar</a></li>
 					<li><a class="sideLink" href="#"><i class="material-icons">timer</i>Timer</a></li>
-					<li><a class="sideLink" href="#"><i class="material-icons">settings</i>Setting</a></li>
+					<li><a class="sideLink" id="settingBtn" href="#"><i class="material-icons">settings</i>Setting</a></li>
 				</ul>
 			</div>
 		</div>
