--- a/homepage/index2.html
+++ b/homepage/index2.html
@@ -38,7 +38,7 @@
 		<div class="gridDiv" id="header">
 			<nav>
 				<div class="nav-wrapper">
-					<a id="homeTitle" class="brand-logo" href="https://www.google.com/">&nbsp;&nbsp;Cactus</a>
+					<a id="homeTitle" class="brand-logo" href="index2.html">&nbsp;&nbsp;Cactus</a>
 					<ul id="nav-mobile" class="right hide-on-med-and-down">
 						<li class="navbarButton"><a href="https://idp.nchu.edu.tw/nidp/idff/sso?id=20&sid=5&option=credential&sid=5&target=https%3A%2F%2Fportal.nchu.edu.tw%2Fportal">興大入口</a></li>
 						<li class="navbarButton"><a href="https://lms2020.nchu.edu.tw/">iLearning 3.0</a></li>
@@ -47,7 +47,7 @@
 						<li class="navbarButton"><a href="https://streetvoice.com/">StreetVoice</a></li>
 						<li class="navbarButton"><a href="https://www.netflix.com">NetFlix</a></li>
 						<li class="navbarButton"><a href="https://www.facebook.com/">facebook</a></li>
-						<li class="navbarButton"><a href="#">Sign in</a></li>
+						<li class="navbarButton"><a href="#">Log in</a></li>
 					</ul>
 				</div>
 			</nav>
