--- a/homepage/index.html
+++ b/homepage/index.html
@@ -1,35 +1,27 @@
 <!DOCTYPE html>
 <html class="no-js" lang="zh-TW">
 	<head>
+		<title>CactusPage</title>
+		
+		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<!-- Compiled and minified CSS -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-	
+		<link rel="stylesheet" href="assets/css/indexgrid.css">
+		<link rel="stylesheet" href="assets/css/style.css">
+
 		<!-- Compiled and minified JavaScript -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 		<script src="assets/js/jquery.js"></script>
+
 		<!--Import Google Icon Font-->
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<!--Import Calender Font-->
-		<link rel="stylesheet" href="./assets/css/calender.css">
-		<link rel="stylesheet" href="./assets/css/indexgrid.css">
-		<link rel="stylesheet" href="./assets/css/style2.css">
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
 		<!--font-family-->
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;subset=devanagari,latin-ext" rel="stylesheet">
-		
-		<!-- title of site -->
-		<title>CactusPage</title>
-
 		<!-- For favicon png -->
 		<link rel="shortcut icon" type="image/icon" href="assets/logo/cactus.png">
-
 	</head>
 	<body>
 		<div class="wrapper">
