little change sidebar

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -67,10 +67,10 @@
 			<div class="gridDiv" id="sideBar">
 				<div>
 					<ul>
-						<li><a class="sideLink" href="#"><i class="material-icons">cottage</i>Home</a></li>
-						<li><a class="sideLink" href="#"><i class="material-icons">event</i>calendar</a></li>
-						<li><a class="sideLink" href="#"><i class="material-icons">timer</i>Timer</a></li>
-						<li><a class="sideLink" id="settingBtn" href="#"><i class="material-icons">settings</i>Setting</a></li>
+						<li class="sideBarIcon"><a class="sideLink" href="#"><i class="material-icons">cottage</i>Home</a></li>
+						<li class="sideBarIcon"><a class="sideLink" href="#"><i class="material-icons">event</i>calendar</a></li>
+						<li class="sideBarIcon"><a class="sideLink" href="#"><i class="material-icons">timer</i>Timer</a></li>
+						<li class="sideBarIcon"><a class="sideLink" id="settingBtn" href="#"><i class="material-icons">settings</i>Setting</a></li>
 					</ul>
 				</div>
 			</div>
