--- a/homepage/index.html
+++ b/homepage/index.html
@@ -84,8 +84,9 @@
 					<div id="calendarheader">
 						<div id="monthDisplay"></div>
 						<div>
-						  <button id="backButton">Back</button>
-						  <button id="nextButton">Next</button>
+							<button id="TodayButton">Today</button>
+							<button id="backButton">Back</button>
+							<button id="nextButton">Next</button>
 						</div>
 					  </div>
 				
