--- a/homepage/index.html
+++ b/homepage/index.html
@@ -82,10 +82,10 @@
 					<div id="calendarheader">
 						<div id="monthDisplay"></div>
 						<div>
-							<button id="quickaddEvent">+Event</button>
+							<button id="quickaddEventBtn">+Event</button>
 							<button id="TodayButton">Today</button>
-							<button id="backButton">Back</button>
-							<button id="nextButton">Next</button>
+							<button id="backButton">＜</button>
+							<button id="nextButton">＞</button>
 						</div>
 					  </div>
 				
@@ -200,13 +200,12 @@
 				</div>
 			</div>
 		</div>
-		
+		<!-- Compiled and minified JavaScript -->
+		<script src="assets/js/jquery.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 		<script src = "assets/js/search.js"></script>
 		<script src = "assets/js/login.js"></script>
 		<script src="assets/js/calendar.js"></script>
-		<!-- Compiled and minified JavaScript -->
-		<script src="assets/js/jquery.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+		
 	</body>
 </html>
