--- a/homepage/index.html
+++ b/homepage/index.html
@@ -38,6 +38,7 @@
 							<li class="navbarButton"><a href="https://www.netflix.com">NetFlix</a></li>
 							<li class="navbarButton"><a href="https://www.facebook.com/">facebook</a></li>
 							<li class="navbarButton"><a id="loginA" href="#">Log in</a></li>
+							<li class="navbarButton"><button>Log in</button></li>
 						</ul>
 					</div>
 				</nav>
