--- a/homepage/index.html
+++ b/homepage/index.html
@@ -36,8 +36,7 @@
 							<li class="navbarButton"><a href="https://streetvoice.com/">StreetVoice</a></li>
 							<li class="navbarButton"><a href="https://www.netflix.com">NetFlix</a></li>
 							<li class="navbarButton"><a href="https://www.facebook.com/">facebook</a></li>
-							<li class="navbarButton"><a id="loginA" href="#">Log in</a></li>
-							<li class="navbarButton"><button>Log in</button></li>
+							<li class="navbarButton"><button id="loginA">Log in</button></li>
 						</ul>
 					</div>
 				</nav>
