update the login click space

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -222,6 +222,7 @@
 					</form>
 				</div>
 			</div>
+			<div id="logInBack"></div>
 		</div>
 		<!-- Compiled and minified JavaScript -->
 		<script src="assets/js/jquery.js"></script>
