--- a/homepage/calendar.html
+++ b/homepage/calendar.html
@@ -32,7 +32,7 @@
 			<div class="gridDiv" id="header">
 				<nav>
 					<div class="nav-wrapper">
-						<a id="homeTitle" class="brand-logo" href="index2.html">&nbsp;&nbsp;Cactus</a>
+						<a id="homeTitle" class="brand-logo" href="index.php">&nbsp;&nbsp;Cactus</a>
 						<ul id="nav-mobile" class="right hide-on-med-and-down">
 							<li class="navbarButton"><a href="https://idp.nchu.edu.tw/nidp/idff/sso?id=20&sid=5&option=credential&sid=5&target=https%3A%2F%2Fportal.nchu.edu.tw%2Fportal">興大入口</a></li>
 							<li class="navbarButton"><a href="https://lms2020.nchu.edu.tw/">iLearning 3.0</a></li>
@@ -41,7 +41,7 @@
 							<li class="navbarButton"><a href="https://streetvoice.com/">StreetVoice</a></li>
 							<li class="navbarButton"><a href="https://www.netflix.com">NetFlix</a></li>
 							<li class="navbarButton"><a href="https://www.facebook.com/">facebook</a></li>
-							<li class="navbarButton"><a id="loginA" href="#">Log in</a></li>
+							<li class="navbarButton"><button id="nameButton">Hello!</button></li>
 						</ul>
 					</div>
 				</nav>
@@ -52,10 +52,11 @@
 			<div class="gridDiv" id="sideBar">
 				<div>
 					<ul>
-						<li class="sideBarIcon"><a class="sideLink" href="index.html"><i class="material-icons">cottage</i>Home</a></li>
+						<li class="sideBarIcon"><a class="sideLink" href="index.php"><i class="material-icons">cottage</i>Home</a></li>
 						<li class="sideBarIcon"><a class="sideLink" href="calendar.html"><i class="material-icons">event</i>calendar</a></li>
 						<li class="sideBarIcon"><a class="sideLink" href="timer.html"><i class="material-icons">timer</i>Timer</a></li>
 						<li class="sideBarIcon"><a class="sideLink" id="settingBtn" href="setting.html"><i class="material-icons">settings</i>Setting</a></li>
+						<li class="sideBarIcon"><a class="sideLink" id="logoutBtn" href="assets/php/logout.php"><i class="material-icons">logout</i>Log out</a></li>
 					</ul>
 				</div>
 			</div>
