setting colorpicker option

--- a/homepage/calendar.html
+++ b/homepage/calendar.html
@@ -38,7 +38,7 @@
 		<div class="gridDiv" id="header">
 			<nav>
 				<div class="nav-wrapper">
-					<a id="homeTitle" class="brand-logo" href="index.php">&nbsp;&nbsp;Cactus</a>
+					<a id="homeTitle" class="brand-logo" href="index.php">&nbsp;&nbsp;Cactus<img class="cactus" src="assets/images/cactus.svg"></a>
 					<ul id="nav-mobile" class="right hide-on-med-and-down">
 						<li class="navbarButton"><a href="https://idp.nchu.edu.tw/nidp/idff/sso?id=20&sid=5&option=credential&sid=5&target=https%3A%2F%2Fportal.nchu.edu.tw%2Fportal">NCHUSSO</a></li>
 						<li class="navbarButton"><a href="https://lms2020.nchu.edu.tw/">iLearning 3.0</a></li>
