--- a/homepage/calendar.html
+++ b/homepage/calendar.html
@@ -61,20 +61,20 @@
 		<!---searchbar end--->
 
 		<!---sidebar start--->
-		<div class="gridDiv" id="sideBar">
+		<!-- <div class="gridDiv" id="sideBar">
 			<div>
 				<ul>
 					<li class="sideBarIcon"><a class="sideLink" href="index.php"><i
 								class="material-icons">cottage</i>Home</a></li>
 					<li class="sideBarIcon"><a class="sideLink" href="calendar.html"><i
-								class="material-icons">event</i>calendar</a></li>
+								class="material-icons">event</i>calendar</a></li> -->
 					<!-- <li class="sideBarIcon"><a class="sideLink" href="timer.html"><i
 								class="material-icons">timer</i>Timer</a></li>
 					<li class="sideBarIcon"><a class="sideLink" id="settingBtn" href="setting.html"><i
 								class="material-icons">settings</i>Setting</a></li> -->
-				</ul>
+				<!-- </ul>
 			</div>
-		</div>
+		</div> -->
 		<!---sidebar end--->
 
 		<!-- calendar star -->
